fix nu journals search button alignment

--- a/less/sections/primo-advanced-search.less
+++ b/less/sections/primo-advanced-search.less
@@ -205,6 +205,7 @@
     text-indent: 0;
     display: block;
     width: auto;
+    clear:both;
     @media (min-width: @screen-md) {
       position: relative;
       bottom: 50px;
